# mkdocs-multirepo

./: .gitignore  README.md  pyproject.toml
mkdocs_multirepo/: __init__.py  mdbook.py
