# 1. Install poetry from python-poetry.org
# 2. poetry build
# 3. poetry publish

[tool.poetry]
name = "mkdocs-multirepo"
version = "0.9.0"
description = ""
authors = ["Lars Wilhelmer", "Jozef Fulop"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
beautifulsoup4 = "^4.9"
click = "^8.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkdocs-multirepo = 'mkdocs_multirepo:cli'